- Changed spell details styling to be collapsed instead of hidden to avoid objects being rearranged on show hide
- Made spell effects table have width 100% for easier scaling

--- a/AD&D 2E Revised/2EStyle.css
+++ b/AD&D 2E Revised/2EStyle.css
@@ -1265,11 +1265,15 @@ div.repcontainer div.repitem:first-child thead.sheet-show-first {
 }
 
 .sheet-spell-effect {
-    width: 555px;
+    width: 100%;
 }
 
-input.sheet-show-spell-details:checked ~ .sheet-spell-effect {
-    width: 620px;
+.sheet-spell-details {
+    visibility: collapse;
+}
+
+input.sheet-show-spell-details:checked ~ .sheet-spell-details {
+    visibility: visible;
 }
 
 /* Announcement styling start */
